code-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__final_reasoning_then_message_without_deltas_are_rendered.snap
---
source: tui/src/chatwidget/tests.rs
expression: combined
---
thinking
I will first analyze the request.

beacon
Here is the result.
