code-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_widget_and_approval_modal.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 851
expression: terminal.backend()
---
"? Beacon Code wants to run echo 'hello world'                                   "
"                                                                                "
"Beacon Code wants to run a command                                              "
"                                                                                "
"▌Allow command?                                                                 "
"▌ Yes   Always   No, provide feedback                                           "
"▌ Approve and run the command                                                   "
"                                                                                "
